Added some slides for the new talk - React-UI Library

--- a/presentations/react-ui-lib/body.html
+++ b/presentations/react-ui-lib/body.html
@@ -6,7 +6,7 @@
   <section>
     <h3>Speed up the development</h3>
 
-    <p class="left">Ui libraries provide you will good set of already working components</p>
+    <p class="left">Ui libraries provide you with good set of already working components</p>
     <p class="left">It's much faster to <i>npm i</i> then code, code, code</p>
   </section>
 
@@ -24,8 +24,8 @@
 
     <ul>
       <li>It requires <strong>deep</strong> customization</li>
-      <li>You need only one single component from the library and will not need more </li>
-      <li>The component you needed is really very simple</li>
+      <li class="fragment fade-up">You need only one single component from the library and will not need more </li>
+      <li class="fragment fade-up">The component you needed is really very simple</li>
     </ul>
   </section>
 
@@ -34,9 +34,9 @@
 
     <ul>
       <li>Grid - making your own grid is a huge pain</li>
-      <li>Datepicker - working with date is a huge pain</li>
-      <li>Modals - accessibility will kill you</li>
-      <li>Specific selects - accessibility, mobiles, etc.</li>
+      <li class="fragment fade-up">Datepicker - working with date is a huge pain</li>
+      <li class="fragment fade-up">Modals - accessibility will kill you</li>
+      <li class="fragment fade-up">Specific selects - accessibility, mobiles, etc.</li>
     </ul>
   </section>
 
@@ -50,7 +50,8 @@
   <section>
     <h3>Gather crucial requirements</h3>
 
-    <p>No reason to use Material UI if your styles not "materials"</p>
+    <p class="left">No reason to use Material UI if your styles not "materials"</p>
+    <p class="left">No reason to use UI library if you need responsiveness and lib doesn't support it</p>
   </section>
 
   <section>
@@ -60,31 +61,31 @@
   </section>
 
   <section>
-    <h3>Check the most important</h3>
+    <h3>Most important aspects</h3>
 
     <ul>
       <li>It should be alive - eg some commits done during the previous month</li>
-      <li>It should be well-known - at least 1000 stars, more is betters</li>
+      <li class="fragment fade-up">It should be well-known - at least 1000 stars, more is betters</li>
     </ul>
   </section>
 
   <section>
-    <h3>Check nice to have</h3>
+    <h3>Nice to have aspects</h3>
 
     <ul>
       <li>Small size or tree shaking</li>
-      <li>Small amount of opened issues</li>
+      <li class="fragment fade-up">Small amount of opened issues</li>
     </ul>
   </section>
 
   <section>
     <h3>Pick the best one and to PoC with it</h3>
 
-    <p>
+    <p class="left">
       Don't waste much time with PoC - check only critical requirements
     </p>
 
-    <p>
+    <p class="left">
       No reason to use select without async search when this is a must
     </p>
   </section>
@@ -93,12 +94,12 @@
     <h3>Some examples</h3>
 
     <ul>
-      <li><a href="https://github.com/mui/material-ui">Material UI</a> 77.6k ⭐, 994k downloads, 458.2kB, tree-shakeable
-      </li>
-      <li><a href="https://github.com/ant-design/ant-design/">Ant design 79.6k ⭐, 745k downloads,1.2mB, tree-shakable
-        </a></li>
-      <li><a href="https://github.com/react-bootstrap/react-bootstrap">React Bootstrap - 20k ⭐, 861k downloads, 112kb
-          tree-shakeable</a></li>
+      <li><a href="https://github.com/mui/material-ui">Material UI</a> ⭐77.6k, downloads - 994k , size - 458.2kB,
+        tree-shakeable </li>
+      <li class="fragment fade-up"><a href="https://github.com/ant-design/ant-design/">Ant design </a> ⭐79.6k, downloads
+        - 745k, size - 1.2mB, tree-shakable</li>
+      <li class="fragment fade-up"><a href="https://github.com/react-bootstrap/react-bootstrap">React Bootstrap </a>
+        ⭐20k, 861k downloads, 112kb tree-shakeable</li>
     </ul>
   </section>
 </section>
@@ -106,5 +107,9 @@
 <section>
   <section>
     <h2>Material UI</h2>
+  </section>
+
+  <section>
+    <h3>Pending</h3>
   </section>
 </section>
