--- a/presentations/react-new-component/index.html
+++ b/presentations/react-new-component/index.html
@@ -12,14 +12,14 @@
     <meta name="twitter:title" content="React For Beginners - Building React Component" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-new-component"
+      content="https://github.com/Drag13/react-learning-course-short/react-new-component/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - Building React Component" />
     <meta name="og:site_name" content="React For Beginners - Building React Component" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-new-component/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - Building React Component" />
     <meta name="author" content="drag13" />
@@ -50,7 +50,7 @@
         <section>
           <h2>Prerequisite</h2>
           <ul>
-            <li>Create new project using <a href="https://drag13.io/react-learning-course-short/1/index.html">example</a></li>
+            <li>Create new project using <a target="_blank" href="https://drag13.io/react-learning-course-short/react-components/index.html">example</a></li>
           </ul>
         </section>
 
@@ -73,10 +73,10 @@
         <section>
           <h2>Useful links</h2>
           <ul>
-            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-class.tsx">Class-based MessageBlock example</a></li>
-            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/mb-functional.tsx">Functional MessageBlock example</a></li>
-            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-functional.tsx">Functional Counter example</a></li>
-            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/3/code/counter-cb.tsx">Class-based Counter example</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/react-new-component/code/mb-class.tsx">Class-based MessageBlock example</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/react-new-component/code/mb-functional.tsx">Functional MessageBlock example</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/react-new-component/code/counter-functional.tsx">Functional Counter example</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/Drag13/react-learning-course-short/blob/master/presentations/react-new-component/code/counter-cb.tsx">Class-based Counter example</a></li>
           </ul>
         </section>
       </div>
