Minor work on the uilib talk

--- a/presentations/react-ui-lib/body.html
+++ b/presentations/react-ui-lib/body.html
@@ -110,6 +110,20 @@
   </section>
 
   <section>
-    <h3>Pending</h3>
+    <h3>Features</h3>
+
+    <ul>
+      <li>Responsiveness</li>
+      <li>High number of components - select, datagrid, datepicker</li>
+      <li>Theme support</li>
+      <li>High level of customization</li>
+    </ul>
   </section>
+
+  <section>
+    <h3>Installation</h3>
+
+    <pre><code data-line-numbers>npm install @mui/material @emotion/react @emotion/styled</code></pre>
+  </section>
+
 </section>
