--- a/presentations/react-intro/index.html
+++ b/presentations/react-intro/index.html
@@ -12,14 +12,14 @@
     <meta name="twitter:title" content="React For Beginners - What is React" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-intro"
+      content="https://github.com/Drag13/react-learning-course-short/react-intro/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - What is React" />
     <meta name="og:site_name" content="React For Beginners - What is React" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-intro/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - What is React" />
     <meta name="author" content="drag13" />
@@ -47,6 +47,15 @@
           </h4>
         </section>
 
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>What is the React</li>
+            <li>Three pillars of React</li>
+            <li>React - advantages and disadvantages</li>
+            <li>Why to learn React nowadays</li>
+          </ul>
+        </section>
 
         <include src="./react-intro/body.html"></include>
 
