--- a/presentations/react-intro/index.html
+++ b/presentations/react-intro/index.html
@@ -60,6 +60,16 @@
         <include src="./react-intro/body.html"></include>
 
         <section>
+          <h2>Takeaway</h2>
+          <ul >
+            <li class="fragment fade-up">React - JavaScript library for building user interfaces</li>
+            <li class="fragment fade-up">React uses JSX - HTMLish syntax to describe UI</li>
+            <li class="fragment fade-up">Data is the single source of truth</li>
+          </ul>
+        </section>
+
+        
+        <section>
           <h2>Useful links</h2>
           <ul>
             <li><a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/getting-started.html">Documentation</a></li>
