--- a/presentations/react-network/index.html
+++ b/presentations/react-network/index.html
@@ -12,22 +12,21 @@
     <meta name="twitter:title" content="React For Beginners - React and network" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-network"
+      content="https://github.com/Drag13/react-learning-course-short/react-network/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - React and network" />
     <meta name="og:site_name" content="React For Beginners - React and network" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-network/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - React and network" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -41,15 +40,24 @@
         </section>
 
         <section>
-          <h1>L10 - React and network</h1>
+          <h1>L9 - React and network</h1>
           <h4>
             <u> React For Beginners by Itera </u>
           </h4>
         </section>
 
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>Fetch</li>
+            <li>Axios</li>
+          </ul>
+        </section>
 
         <include src="./react-network/body.html"></include>
 
+
+        
         <section>
           <h2>Useful links</h2>
           <ul>
