--- a/presentations/react-new-component/index.html
+++ b/presentations/react-new-component/index.html
@@ -26,8 +26,7 @@
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -48,13 +47,18 @@
         </section>
 
         <section>
-          <h2>Prerequisite</h2>
+          <h2>Key Points</h2>
           <ul>
-            <li>Create new project using <a target="_blank" href="https://drag13.io/react-learning-course-short/react-components/index.html">example</a></li>
+            <li>What is component - quick recap</li>
+            <li>Building "dumb" components - functional and class-based</li>
+            <li>Building "smart" component - functional and class-based</li>
+            <li>What and when to use</li>
+            <li>Components - best practices</li>
           </ul>
         </section>
 
         <include src="./react-new-component/body.html"></include>
+
 
         <section>
           <h2>Home task</h2>
@@ -70,6 +74,7 @@
             <li>When clicked, it should log into the console next text: `redirecting user to the next {link}` where `{link}` should be a's href</li>
           </ul>
         </section>
+        
         <section>
           <h2>Useful links</h2>
           <ul>
