--- a/presentations/react-testing/index.html
+++ b/presentations/react-testing/index.html
@@ -26,8 +26,7 @@
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -41,15 +40,26 @@
         </section>
 
         <section>
-          <h1>L12 - Tests</h1>
+          <h1>L11 - Tests</h1>
           <h4>
             <u> React For Beginners by Itera </u>
           </h4>
         </section>
 
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>Why test</li>
+            <li>Testing pyramid</li>
+            <li>What should be tested</li>
+            <li>Testing with Jest</li>
+          </ul>
+        </section>
 
         <include src="./react-testing/body.html"></include>
 
+
+        
         <section>
           <h2>Useful links</h2>
           <ul>
