--- a/presentations/react-ui-lib/index.html
+++ b/presentations/react-ui-lib/index.html
@@ -26,8 +26,7 @@
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -41,15 +40,25 @@
         </section>
 
         <section>
-          <h1>L11 - UI libraries</h1>
+          <h1>L10 - UI libraries</h1>
           <h4>
             <u> React For Beginners by Itera </u>
           </h4>
         </section>
 
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>Purpose</li>
+            <li>How to choose</li>
+            <li>Material UI</li>
+          </ul>
+        </section>
 
         <include src="./react-ui-lib/body.html"></include>
 
+
+        
       </div>
     </div>
 
