--- a/presentations/react-change-detection/index.html
+++ b/presentations/react-change-detection/index.html
@@ -12,22 +12,21 @@
     <meta name="twitter:title" content="React For Beginners - Tracking Changes" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-change-detection"
+      content="https://github.com/Drag13/react-learning-course-short/react-change-detection/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - Tracking Changes" />
     <meta name="og:site_name" content="React For Beginners - Tracking Changes" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-change-detection/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - Tracking Changes" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -47,6 +46,16 @@
           </h4>
         </section>
 
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>What is change detection</li>
+            <li>Implicit change detection with Angular</li>
+            <li>Explicit change detection with React</li>
+            <li>How it works in React (simplified)</li>
+            <li>Typical mistakes</li>
+          </ul>
+        </section>
 
         <include src="./react-change-detection/body.html"></include>
 
