--- a/presentations/react-cra/index.html
+++ b/presentations/react-cra/index.html
@@ -5,29 +5,28 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React For Beginners - Starting new project with create-react-app</title>
-    <meta name="description" content="Free learning course - React: Starting new project with create-react-app" />
+    <title>React For Beginners - A new project with create-react-app</title>
+    <meta name="description" content="Free learning course - React: A new project with create-react-app" />
     <meta name="keywords" content="react free learning course beginners" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="React For Beginners - Starting new project with create-react-app" />
+    <meta name="twitter:title" content="React For Beginners - A new project with create-react-app" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-cra"
+      content="https://github.com/Drag13/react-learning-course-short/react-cra/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
-    <meta property="og:title" content="React For Beginners - Starting new project with create-react-app" />
-    <meta name="og:site_name" content="React For Beginners - Starting new project with create-react-app" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:title" content="React For Beginners - A new project with create-react-app" />
+    <meta name="og:site_name" content="React For Beginners - A new project with create-react-app" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-cra/index.htnl" />
     <meta property="og:type" content="website" />
-    <meta name="application-name" content="React For Beginners - Starting new project with create-react-app" />
+    <meta name="application-name" content="React For Beginners - A new project with create-react-app" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -41,21 +40,33 @@
         </section>
 
         <section>
-          <h1>L1 - Starting new project with create-react-app</h1>
+          <h1>L1 - A new project with create-react-app</h1>
           <h4>
             <u> React For Beginners by Itera </u>
           </h4>
         </section>
 
         <section>
-          <h2>Prerequisite</h2>
+          <h2>Key Points</h2>
           <ul>
-            <li>Install <a href="https://nodejs.org/en/">Node.JS</a></li>
-            <li>Install <a href="https://code.visualstudio.com/">VsCode</a></li>
+            <li>Starting new React project from scratch using create-react-app</li>
+            <li>Project structure</li>
+            <li>Files you need to know</li>
+            <li>Predefined commands</li>
+            <li>Code examples</li>
+            <li>Alternatives</li>
           </ul>
         </section>
 
         <include src="./react-cra/body.html"></include>
+
+        <section>
+          <h2>Takeaway</h2>
+          <ul >
+            <li class="fragment fade-up">Creating new React project is very simple</li>
+            <li class="fragment fade-up">Use npm start to start the an app locally or npm run build to build it for release</li>
+          </ul>
+        </section>
 
         <section>
           <h2>Home task</h2>
@@ -73,6 +84,7 @@
             <li>Commit and push the results with <i>git add .</i>, <i>git commit -m "Initial commit"</i>, <i>git push</i></li>
           </ul>
         </section>
+        
         <section>
           <h2>Useful links</h2>
           <ul>
