--- a/presentations/react-forms/index.html
+++ b/presentations/react-forms/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React For Beginners - Forms - Default way and React-Hook-Forms</title>
@@ -9,67 +10,72 @@
     <meta name="keywords" content="react free learning course beginners" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="React For Beginners - Forms - Default way and React-Hook-Forms" />
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short" />
+    <meta
+      name="twitter:site"
+      content="https://github.com/Drag13/react-learning-course-short/react-forms/index.html"
+    />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - Forms - Default way and React-Hook-Forms" />
+    <meta name="og:site_name" content="React For Beginners - Forms - Default way and React-Hook-Forms" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-forms/index.htnl" />
+    <meta property="og:type" content="website" />
+    <meta name="application-name" content="React For Beginners - Forms - Default way and React-Hook-Forms" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
-<body>
-  <div class="reveal">
-    <div class="slides">
-      <section>
-        <h1 class="ukraine">
-          Free React Course <br />
-          For Beginners
-        </h1>
-      </section>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+        <section>
+          <h1 class="ukraine">
+            Free React Course <br />
+            For Beginners
+          </h1>
+        </section>
 
-      <section>
-        <h1>L7 - Forms - Default way and React-Hook-Forms</h1>
-        <h4>
-          <u> React For Beginners by Itera </u>
-        </h4>
-      </section>
+        <section>
+          <h1>L7 - Forms - Default way and React-Hook-Forms</h1>
+          <h4>
+            <u> React For Beginners by Itera </u>
+          </h4>
+        </section>
 
-      <section>
-        <h2>Prerequisite</h2>
-        <ul>
-          <li>
-            Install <a href="https://react-hook-form.com/get-started">React Hook Form</a> before
-            the workshop
-          </li>
-        </ul>
-      </section>
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>React Forms - default way</li>
+            <li>Building your first form with  <a href="https://react-hook-form.com/get-started">React Hook Form</a></li>
+            <li>Validation with Yup</li>
+          </ul>
+        </section>
 
-      <include src="./react-forms/body.html"></include>
+        <include src="./react-forms/body.html"></include>
 
-      <section>
-        <h2>Useful links</h2>
-        <ul>
-          <li>
-            <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/forms.html">React forms -
-              default way</a>
-          </li>
-          <li>
-            <a target="_blank" rel="noreferrer noopener" href="https://react-hook-form.com/get-started">React Hook
-              Form</a>
-          </li>
-          <li>
-            <a target="_blank" rel="noreferrer noopener" href="https://github.com/jquense/yup">Yup</a>
-          </li>
-        </ul>
-      </section>
+
+        
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/forms.html">React forms - default way</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://react-hook-form.com/get-started">React Hook Form</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/jquense/yup">Yup</a></li>
+          </ul>
+        </section>
+      </div>
     </div>
-  </div>
-  <script src="../shared/init.js" type="module"></script>
-</body>
 
+    <script src="../shared/init.js" type="module"></script>
+
+    <footer class="footer">
+      <a href="https://itera.com">
+        <img src="../shared/imgs/Itera-logo-white-fuchsia.jpg" alt="https://itera.com" />
+      </a>
+    </footer>
+  </body>
 </html>
