--- a/presentations/react-router/index.html
+++ b/presentations/react-router/index.html
@@ -12,22 +12,21 @@
     <meta name="twitter:title" content="React For Beginners - Routing in React" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-router"
+      content="https://github.com/Drag13/react-learning-course-short/react-router/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - Routing in React" />
     <meta name="og:site_name" content="React For Beginners - Routing in React" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-router/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - Routing in React" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -41,14 +40,24 @@
         </section>
 
         <section>
-          <h1>L9 - Routing in React</h1>
+          <h1>L8 - Routing in React</h1>
           <h4>
             <u> React For Beginners by Itera </u>
           </h4>
         </section>
 
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>Install react router</li>
+            <li>Basic setup</li>
+            <li>Data Binding</li>
+            <li>Router guard</li>
+          </ul>
+        </section>
 
         <include src="./react-router/body.html"></include>
+
 
         <section>
           <h2>Home task</h2>
@@ -61,6 +70,7 @@
             <li>If `ln` equals `en` all text should be in English (feel free to use google translate if needed)</li>
           </ul>
         </section>
+        
         <section>
           <h2>Useful links</h2>
           <ul>
