--- a/presentations/react-state-management/index.html
+++ b/presentations/react-state-management/index.html
@@ -12,22 +12,21 @@
     <meta name="twitter:title" content="React For Beginners - Managing state in React" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-state-management"
+      content="https://github.com/Drag13/react-learning-course-short/react-state-management/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - Managing state in React" />
     <meta name="og:site_name" content="React For Beginners - Managing state in React" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-state-management/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - Managing state in React" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -48,14 +47,17 @@
         </section>
 
         <section>
-          <h2>Prerequisite</h2>
+          <h2>Key Points</h2>
           <ul>
-            <li>Copy the <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-state-management/code/index_general.tsx">code</a> to your project</li>
-            <li>Install MobX - <i>npm i mobx mobx-react-lite</i></li>
+            <li>Problems with setState and useState</li>
+            <li>Context</li>
+            <li>Redux</li>
+            <li>MobX</li>
           </ul>
         </section>
 
         <include src="./react-state-management/body.html"></include>
+
 
         <section>
           <h2>Home task</h2>
@@ -72,6 +74,7 @@
             <li>Implement same functionality with MobX</li>
           </ul>
         </section>
+        
         <section>
           <h2>Useful links</h2>
           <ul>
