--- a/presentations/react-styling/index.html
+++ b/presentations/react-styling/index.html
@@ -12,22 +12,21 @@
     <meta name="twitter:title" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/react-styling"
+      content="https://github.com/Drag13/react-learning-course-short/react-styling/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
     <meta property="og:title" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
     <meta name="og:site_name" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
-    <meta property="og:url" content="https://drag13.io/" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-styling/index.htnl" />
     <meta property="og:type" content="website" />
     <meta name="application-name" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css" />
-    <link rel="stylesheet" href="../shared/helpers.css" />
+    <link rel="stylesheet" href="../shared/index.css" />
   </head>
 
   <body>
@@ -47,9 +46,20 @@
           </h4>
         </section>
 
+        <section>
+          <h2>Key Points</h2>
+          <ul>
+            <li>Default way</li>
+            <li>Using CSS modules</li>
+            <li>Preprocessors</li>
+            <li>CSS in JS</li>
+          </ul>
+        </section>
 
         <include src="./react-styling/body.html"></include>
 
+
+        
         <section>
           <h2>Useful links</h2>
           <ul>
