Added more examples for the react-ui-lib

--- a/presentations/react-ui-lib/body.html
+++ b/presentations/react-ui-lib/body.html
@@ -126,4 +126,41 @@
     <pre><code data-line-numbers>npm install @mui/material @emotion/react @emotion/styled</code></pre>
   </section>
 
+  <section>
+    <h3>Typography</h3>
+
+    <pre><code data-line-numbers>&lt;Typography align="left" component="h1" marginY={4}&gt;
+  Pay attention to marginY
+&lt;/Typography&gt;</code></pre>
+  </section>
+
+  <section>
+
+    <h3>Wrapper</h3>
+    <pre><code data-line-numbers>&lt;Box marginLeft={3} sx={{ color: 'red' }} component="span"&gt;
+  Red text inside the span
+&lt;/Box&gt;   </code></pre>
+  </section>
+
+  <section>
+    <h3>Container</h3>
+    <pre><code data-line-numbers>&lt;Container maxWidth="lg"&gt;
+  Some content
+&lt;/Container&gt;</code></pre>
+  </section>
+
+  <section>
+    <h3>Responsive grid</h3>
+
+    <pre><code data-line-numbers>&lt;Grid container spacing={2}&gt;
+  &lt;Grid item xs={0} md={4}&gt;
+    &lt;ImageBlock /&gt;
+  &lt;/Grid&gt;
+  &lt;Grid item xs={12} md={8}&gt;
+    &lt;InformationBlock /&gt;
+  &lt;/Grid&gt;
+&lt;/Grid&gt;
+    </code></pre>
+  </section>
+
 </section>
