Added the last talk about the react and ui. Hurray!

--- a/presentations/react-ui-lib/body.html
+++ b/presentations/react-ui-lib/body.html
@@ -79,6 +79,13 @@
   </section>
 
   <section>
+    <h3>Bundlephobia</h3>
+
+    <p class="left"><a rel="noreferrer noopener" href="https://bundlephobia.com/">Bundlephobia</a> - great tool to check
+      how much your package will affect the final bundle</p>
+  </section>
+
+  <section>
     <h3>Pick the best one and to PoC with it</h3>
 
     <p class="left">
@@ -94,11 +101,14 @@
     <h3>Some examples</h3>
 
     <ul>
-      <li><a href="https://github.com/mui/material-ui">Material UI</a> ⭐77.6k, downloads - 994k , size - 458.2kB,
+      <li><a rel="noreferrer noopener" href="https://github.com/mui/material-ui">Material UI</a> ⭐77.6k, downloads -
+        994k , size - 458.2kB,
         tree-shakeable </li>
-      <li class="fragment fade-up"><a href="https://github.com/ant-design/ant-design/">Ant design </a> ⭐79.6k, downloads
+      <li class="fragment fade-up"><a rel="noreferrer noopener" href="https://github.com/ant-design/ant-design/">Ant
+          design </a> ⭐79.6k, downloads
         - 745k, size - 1.2mB, tree-shakable</li>
-      <li class="fragment fade-up"><a href="https://github.com/react-bootstrap/react-bootstrap">React Bootstrap </a>
+      <li class="fragment fade-up"><a rel="noreferrer noopener"
+          href="https://github.com/react-bootstrap/react-bootstrap">React Bootstrap </a>
         ⭐20k, 861k downloads, 112kb tree-shakeable</li>
     </ul>
   </section>
@@ -114,9 +124,9 @@
 
     <ul>
       <li>Responsiveness</li>
-      <li>High number of components - select, datagrid, datepicker</li>
-      <li>Theme support</li>
-      <li>High level of customization</li>
+      <li class="fragment fade-up">High number of components - select, datagrid, datepicker</li>
+      <li class="fragment fade-up">Theme support</li>
+      <li class="fragment fade-up">High level of customization</li>
     </ul>
   </section>
 
@@ -132,6 +142,14 @@
     <pre><code data-line-numbers>&lt;Typography align="left" component="h1" marginY={4}&gt;
   Pay attention to marginY
 &lt;/Typography&gt;</code></pre>
+  </section>
+
+  <section>
+    <h3>What does <i>4</i> means?</h3>
+
+    <p class="left">This mean 4 predefined points - 4em, or 4px, or 4xWhatEver you need</p>
+
+    <p class="left">This keeps your UI consistent</p>
   </section>
 
   <section>
@@ -161,6 +179,21 @@
   &lt;/Grid&gt;
 &lt;/Grid&gt;
     </code></pre>
+  </section>
+
+  <section>
+    <h3>And much, much more</h3>
+
+    <ul>
+      <li> <a rel="noreferrer noopener" href="https://mui.com/material-ui/react-dialog/">Dialog</a> </li>
+      <li> <a rel="noreferrer noopener" href="https://mui.com/material-ui/react-accordion/">Accordion</a> </li>
+      <li> <a rel="noreferrer noopener" href="https://mui.com/material-ui/react-breadcrumbs/">Breadcrumbs</a></li>
+      <li>
+        <a rel="noreferrer noopener" href="https://mui.com/material-ui/react-select/">Select</a>
+      </li>
+      <li> <a rel="noreferrer noopener" href="https://mui.com/material-ui/react-slider/">Slider</a> </li>
+      <li>...</li>
+    </ul>
   </section>
 
 </section>
