--- a/presentations/react-ui-lib/index.html
+++ b/presentations/react-ui-lib/index.html
@@ -59,6 +59,15 @@
 
 
         
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/mui/material-ui">Material</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/ant-design/ant-design/">Ant Design</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://github.com/react-bootstrap/react-bootstrap">React Bootstrap</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://bundlephobia.com/">Bundlephobia</a></li>
+          </ul>
+        </section>
       </div>
     </div>
 
