WIP on the first lecture

--- a/presentations/react-intro/body.html
+++ b/presentations/react-intro/body.html
@@ -14,6 +14,31 @@
 </section>
 
 <section>
+
+    <section>
+        <h2>The problem</h2>
+
+        <p>How to sync the view and the data</p>
+    </section>
+
+    <section>
+        <h3>Good old time</h3>
+
+        <img src="./img/old.png" alt="">
+    </section>
+
+    <section>
+        <h3>This days</h3>
+
+        <img src="./img/pb24.png" alt="">
+    </section>
+
+    <section>
+        <h3>When one field depends on another... 🔥</h3>
+    </section>
+</section>
+
+<section>
     <section>
         <h2>What is the React</h2>
     </section>
