--- a/presentations/react-intro/index.html
+++ b/presentations/react-intro/index.html
@@ -49,10 +49,11 @@
         <section>
           <h2>Key Points</h2>
           <ul>
-            <li>What is the React</li>
-            <li>Three pillars of React</li>
-            <li>React - advantages and disadvantages</li>
-            <li>Why to learn React nowadays</li>
+            <li class="fragment fade-up">The problem</li>
+            <li class="fragment fade-up">What is the React</li>
+            <li class="fragment fade-up">Three pillars of React</li>
+            <li class="fragment fade-up">React - advantages and disadvantages</li>
+            <li class="fragment fade-up">Why to learn React nowadays</li>
           </ul>
         </section>
 
