Updated CRA with latest layout

--- a/presentations/react-cra/index.html
+++ b/presentations/react-cra/index.html
@@ -49,12 +49,12 @@
         <section>
           <h2>Key Points</h2>
           <ul>
-            <li>Starting new React project from scratch using create-react-app</li>
-            <li>Project structure</li>
-            <li>Files you need to know</li>
-            <li>Predefined commands</li>
-            <li>Code examples</li>
-            <li>Alternatives</li>
+            <li class="fragment fade-up">Starting new React project from scratch using create-react-app</li>
+            <li class="fragment fade-up">Project structure</li>
+            <li class="fragment fade-up">Files you need to know</li>
+            <li class="fragment fade-up">Predefined commands</li>
+            <li class="fragment fade-up">Code examples</li>
+            <li class="fragment fade-up">Alternatives</li>
           </ul>
         </section>
 
